# kantor

./: .gitignore  DEPLOY.md  README.md  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  models.py  nbp.py  pricing.py  scheduler.py  schemas.py  seed.py  services.py
backend/app/routers/: admin.py  auth.py  public.py
backend/tests/: conftest.py  test_api.py  test_pricing.py
frontend/: .env.example  .env.production  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx
frontend/src/components/: Calculator.tsx  RatesTable.tsx  ReservationForm.tsx  ReservationStatus.tsx
frontend/src/lib/: format.ts
frontend/src/pages/: HomePage.tsx
frontend/src/pages/admin/: AdminCurrencies.tsx  AdminLayout.tsx  AdminLogin.tsx  AdminReservations.tsx
